<?xml version="1.0"?>
<package format="2">

  <name>mrs_llcp_ros</name>
  <version>0.0.1</version>
  <description>low level communication interface for serial line</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <maintainer email="Tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mrs_uav_managers</depend>
  <depend>mrs_lib</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>libeigen3-dev</build_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />
    
  </export>

</package>
